--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -1,3 +1,5 @@
+/* GENERAL SETTINGS */
+
 body {
     font-size: 20px;
 }
@@ -9,6 +11,8 @@ body {
 .container {
     padding: 5rem 0;
 }
+
+/* NAV SECTION */
 
 nav .container {
     padding: 0.5rem 0;
@@ -25,14 +29,17 @@ nav .container {
     color: white;
 }
 
-nav li {
+nav li, label {
     font-size: 14px;
 }
 
 #jumbo {
+    padding-top: 5rem;
     background-color: #26b58d;
     color: white;
 }
+
+/* PORTFOLIO SECTION */
 
 #portfolio .row:last-of-type div {
     padding: 2rem 4rem;
@@ -42,6 +49,8 @@ nav li {
 
 }
 
+/* ABOUT SECTION */
+
 #about {
     background-color: #26b58d;
     color: white;
@@ -50,7 +59,10 @@ nav li {
     color: white;
     background-color: #26b58d;
     border: 1px solid white;
+    font-size: 20px;
 }
+
+/* CONTACT SECTION */
 
 input, textarea {
     border: 0;
@@ -62,8 +74,10 @@ input {
 
 textarea {
     width: 100%;
-    height: 6rem;
+    height: 8rem;
 }
+
+/* FOOTER SECTION */
 
 footer {
     background-color: #4a5787;
@@ -82,7 +96,10 @@ footer a {
     padding: 2rem;
     margin-block-start: 0;
     margin-block-end: 0;
+    font-size: 12px;
 }
+
+/* MEDIA QUERIES */
 
 @media screen and (min-width: 992px) {
     .extra-padding-left {
